<resources>
    <string name="app_name">SDA Assign4_2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_ragment">One string</string>
    <string name="images_desc">Book Thumb</string>
    <string name="plc_author">Edgar Rice Burroughs</string>
    <string name="plc_title">Tarzan and the Golden Lion</string>
    <string name="border">border item</string>
    <string name="check_out">Check Out</string>
    <string name="library">library</string>
    <string name="button_reset">Reset Details</string>
    <string name="date">Select Date</string>
    <string name="orderButton">Send Order</string>
    <string name="userName">Borrower Name</string>
    <string name="borrowerID">Borrower ID</string>
    <string name="email">Email address</string>
    <string name="button">Save Details</string>
    <string name="welcomeText">Welcome to DCU"'"s Book reservation app.</string>
    <string name="officeHours">Book drop-off opens from 9am to 14:00 every day</string>

</resources>
